--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -23,7 +23,7 @@ import LinkCard from "../components/mdx/LinkCard.astro";
 
   </BaseCard>
 
-  <BaseCard title="Home" image="/index.webp">
+  <BaseCard title="Home" image="https://free4.yunpng.top/2025/01/03/67774bbb1bc8e.webp">
 
 🏠HOME / 主页
 ---
